mule-user-guide/v/3.8/batch-filters-and-batch-commit.adoc
= 批量过滤器和批量提交
:keywords: filters, connectors, anypoint, studio, batch

*_Enterprise, CloudHub_*

使用批处理，您可以改进批处理步骤对其处理的记录执行的工作。

* 您可以在批处理步骤中设置*filters*，以便只接受一些要处理的记录。
* 您可以*commit*以组的形式进行记录，并将它们作为批量upserts发送到外部来源或服务。

本文档概述了如何以及何时使用批量过滤器和批量提交包装器。


== 先决条件

本文档假定您熟悉 link:/anypoint-studio/v/6/[Anypoint Studio]，已审阅 link:/mule-user-guide/v/3.8/batch-processing[批量处理]的概述和基本解剖结构，并了解批处理作业如何处理 link:/mule-user-guide/v/3.8/batch-processing[记录失败处理]。您还应该考虑 link:/mule-user-guide/v/3.8/batch-streaming-and-job-execution#streaming-batch-commits[流式批量提交]。

== 过滤器

您可以将一个或多个过滤器作为属性应用于批作业中的任意批处理步骤。通过使批处理步骤仅接受一些记录进行处理，可以简化处理过程，以便Mule只关注与特定批处理步骤相关的数据。

例如，可以将过滤器应用于批处理作业中的第二批处理步骤，以确保第二步仅尝试处理在第一批处理步骤中处理期间未失败的记录。为了把它放在用例的上下文中，设想一个批量作业，它使用它的第一批步骤来检查Salesforce联系人是否存在记录;第二批步骤会使用新信息更新每个现有Salesforce联系人。在这种情况下，您可以将过滤器应用于第二批步骤，以确保它仅处理在第一批步骤中未失败的记录。

过滤器在批处理步骤中应用。使用*Accept Expression*仅处理那些相对于MEL表达式评估为true的记录;如果记录评估为false，则批处理步骤不处理记录。换句话说，那些过滤表达式解析为false的记录是Mule过滤器_out_。

以下示例将筛选年龄小于21岁的所有记录;该批处理步骤不会处理这些记录。

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:accept_expression.png[accept_expression]
....
[tab,title="XML Editor"]
....
Note that details in code snippet are abbreviated so as to highlight batch step attributes.

[source, xml, linenums]
----
<batch:step name="adultsOnlyStep" accept-expression="#[payload.age > 21]">
----
....
------


使用*Accept Policy*仅处理相对于接受策略属性的值计算为true的记录。请参阅下表以获取接受策略的可用值列表。以下示例说明了批处理作业中的第二批处理步骤，该步骤仅处理在前一步骤中处理失败的那些记录。在第一批步骤中，Mule检查每条记录，看它是否有现有的Salesforce联系人;第二个批处理步骤为每个记录创建一个联系人，仅处理失败的记录（即没有现有账户的记录）。

[%header,cols="25a,75a"]
|===
|接受政策 |评估为TRUE时
| NO_FAILURES  | _ Default_ +
批处理步骤仅处理在所有先前步骤中处理_succeeded_的记录
| ONLY_FAILURES  |批处理步骤仅处理那些在之前的批处理步骤中进行了_failed_处理的记录
|全部 |批处理步骤处理所有记录，无论它们是否在前面的批处理步骤中处理失败
|===

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:accept_policy.png[accept_policy]
....
[tab,title="XML Editor"]
....
Note that details in the code snippet are abbreviated so as to highlight batch step attributes.

[source, xml, linenums]
----
<batch:step name="Create_Contact" accept-policy="ONLY_FAILURES" doc:name="Create Contact">
----
....
------

=== 滤波器特性

* 批处理过滤器仅适用于批处理步骤，而批处理步骤又仅适用于批处理作业的 link:https://docs.mulesoft.com/mule-user-guide/v/3.8/batch-processing#process[在批处理阶段]。您无法使用“输入”或“完成”阶段应用筛选器。

* 如果您不将过滤器应用于批处理步骤，则该批处理仅处理在前面所有步骤中进行的_succeeded_处理的那些记录。换句话说，应用于所有批次步骤的默认接受策略是NO_FAILURES。

* 当批处理作业实例超过其`max-failed-records`值时，无论批处理步骤中设置了哪个筛选器，该步骤都不会处理任何记录，只需将失败的批处理作业实例推送到“完成”阶段。详细了解 link:/mule-user-guide/v/3.8/batch-processing#handling-failures-during-batch-processing[批处理作业中的失败处理]。

* 有关批次步属性的详细信息，请参阅 link:/mule-user-guide/v/3.8/batch-processing-reference[批参考]。

* 如果您应用两种类型的过滤器，Mule会按以下顺序评估它们：
+
. 接受政策
+
. 接受表达式

== 批量提交

您可以在批处理步骤中使用*Batch Commit*作用域，以便将批量upsert中的记录子集累积到外部源或服务。例如，您可以将批量提交配置为累计100条记录，然后将所有这些记录全部上传到Google联系人中，而不是将每个联系人（即记录）插入Google通讯录中。

在批处理步骤中，您可以应用它的唯一位置是使用批处理提交来包装出站消息源。看下面的例子。

*Note:*另请参阅 link:/mule-user-guide/v/3.8/batch-streaming-and-job-execution#streaming-batch-commits[流式批量提交]。

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:aggregator.png[aggregator]

image:batch_commit.png[batch_commit]
....
[tab,title="XML Editor"]
....
Note that details in code snippet are abbreviated so as to highlight batch commit and its attributes.

[source, xml, linenums]
----
<batch:step name="Step2">
    <batch:commit size="100">
        <google-contacts:/>
    </batch:commit>
</batch:step>
----
....
------

=== 批量提交特性

* 批量提交作用域只能存在于批处理步骤中，而批处理步骤又只能用于批处理作业的 link:https://docs.mulesoft.com/mule-user-guide/v/3.8/batch-processing#process[在批处理阶段]。您不能在“输入”或“完成”阶段中使用批量落实。

* 提交只能将最后一个元素包含在它所在的批处理步骤中。

* 多个*Anypoint Connectors*有能力处理记录级错误，而不会失败整个批处理提交（即upsert）。在运行时，这些连接器会跟踪哪些记录被目标资源成功接受，哪些记录无法插入。因此，连接器不是在提交活动期间失败一组完整的记录，而是简单地插入尽可能多的记录，并跟踪任何通知失败。下面简要介绍一下这种连接器的情况：

** 的Salesforce
Google通讯录** 
Google日历。** 
** 的NetSuite
** 数据库

* 有关批次步属性的详细信息，请参阅 link:/mule-user-guide/v/3.8/batch-processing-reference[批参考]。

* 批处理不支持作业实例范围的事务。您可以在批处理步骤中定义一个处理单独事务中的每个记录的事务。 （把它看作是一步之内的一步。）这样的事务必须在步骤的边界内开始和结束。

{0}}您无法在步骤中存在的批次步骤和批次落实之间共享事务。批处理步骤开始的任何事务在批处理提交开始处理之前结束。换句话说，事务不能跨越批处理步骤与其包含的批处理提交之间的障碍。

提交块中的=== 可变记录

在以前的Mule版本中，提交块只显示分组记录的有效内容，不允许您更改这些有效内容，也不允许检索关联的 link:/mule-user-guide/v/3.8/record-variable[记录变量]。
从3.8开始，Mule允许您从批处理提交块内访问分组记录的有效负载和变量，并使用Mule表达式语言（MEL）处理它们。

==== 顺序访问

您可以持续检查每个记录的有效负载并将其作为记录变量顺序存储。 +
在批作业的 link:/mule-user-guide/v/3.8/batch-processing#process[过程阶段]期间，您可以替换，更改或存储有效内容数据。

通过添加 link:/mule-user-guide/v/3.8/foreach[Foreach范围]，您可以迭代通过固定大小的提交块，并使用 link:/mule-user-guide/v/3.8/expression-component-reference[表达组件参考]修改有效负载并为每个收集的记录创建一个记录变量。

[source,xml,linenums]
----
<batch:step name="commitStep">
<batch:commit size="10">
	<foreach>
		<expression-component>
			record.payload = 'foo';
			record.recordVars['marco'] = 'polo';
		</expression-component>
	</foreach>
</batch:commit>
</batch:step>
----

////
另外，你可以使用它来进行流式传输：

[source,xml,linenums]
----
<batch:step name="commitStep">
	<batch:commit streaming="true">
	    <foreach>
			<expression-component>
				record.payload = 'foo';
				record.recordVars['marco'] = 'polo';
			</expression-component>
		</foreach>
	</batch:commit>
</batch:step>
----
////

顺序访问方法假定：

. 提交大小与聚合记录的数量相匹配。
. 汇总记录与列表中的项目之间存在直接关联。

==== 随机访问

您可以使用`records`变量访问随机记录，而无需迭代。这个变量提供了一个可以通过提交块访问的随机访问列表。

[NOTE]
_counter_变量是`Foreach`用于跟踪迭代的不变列表。

您可以通过为_records_列表指定任意索引号而不是按顺序访问每条记录来执行与上例相同的结果：

[source,xml,linenums]
----
<batch:step name="commitStep">
    <batch:commit size="10">
		<foreach>
        	<expression-component>
        		records[0].payload = 'foo';
        	 	records[0].recordVars['marco'] = 'polo';
        	</expression-component>
		</foreach>
    </batch:commit>
</batch:step>
----

使用随机访问，您可以在提交块的任何索引位置更改记录的有效负载。

[TIP]
====
由于内存限制，流式提交不支持随机访问。

随机访问的记录有效载荷以`immutable List`形式公开，由于流式提交意味着可以访问整组记录，而没有固定的提交大小，我们无法保证所有记录都适合内存。

流式提交时，始终使用顺序访问方法。
====

== 示例

此示例使用批处理来解决一个用例，其中由名称，生日和电子邮件地址组成的潜在客户逗号分隔值文件（CSV）的内容必须上载到Salesforce。为避免重复任何销售线索，批处理作业会在将数据上传到Salesforce之前检查是否存在潜在客户。

有关更多信息，请参阅：

*  link:/mule-user-guide/v/3.8/batch-processing[批量处理]，详细说明批处理作业在每个处理阶段中所采用的步骤。
*  https://www.anypoint.mulesoft.com/exchange/?search=import%20leads%20salesforce [示例：将销售线索导入Salesforce]。

`insert-lead`批处理步骤同时使用*Accept Expression*和*Batch Commit*（见下文）。

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:example_batch.png[example_batch]
....
[tab,title="XML Editor"]
....
[NOTE]
====
If you copy and paste the code into your instance of Studio, be sure to enter your own values for the *global Salesforce connector*:

* Username
* Password
* Security token

*How do I get a Salesforce security token?*

. Log in to your Salesforce account. From your account menu (your account is labeled with your name), select *Setup*.
. In the left navigation bar, under the *My Settings* heading, click to expand the *Personal* folder. 
. Click *Reset My Security Token*. Salesforce resets the token and emails you the new one.
. Access the email that Salesforce sent and copy the new token onto your local clipboard.
. In the application in your instance of Anypoint Studio, click the *Global Elements* tab. 
. Double-click the Salesforce global element to open its *Global Element Properties* panel. In the *Security Token* field, paste the new Salesforce token you copied from the email. Alternatively, configure the global element in the XML Editor.
====

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
<mule xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:batch="http://www.mulesoft.org/schema/mule/batch" xmlns:context="http://www.springframework.org/schema/context" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation" xmlns:dw="http://www.mulesoft.org/schema/mule/ee/dw" xmlns:file="http://www.mulesoft.org/schema/mule/file" xmlns:metadata="http://www.mulesoft.org/schema/mule/metadata" xmlns:sfdc="http://www.mulesoft.org/schema/mule/sfdc" xmlns:spring="http://www.springframework.org/schema/beans" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/file http://www.mulesoft.org/schema/mule/file/current/mule-file.xsd
http://www.mulesoft.org/schema/mule/batch http://www.mulesoft.org/schema/mule/batch/current/mule-batch.xsd
http://www.mulesoft.org/schema/mule/sfdc http://www.mulesoft.org/schema/mule/sfdc/current/mule-sfdc.xsd
http://www.springframework.org/schema/context http://www.springframework.org/schema/context/spring-context-current.xsd
http://www.mulesoft.org/schema/mule/ee/dw http://www.mulesoft.org/schema/mule/ee/dw/current/dw.xsd">

    <sfdc:config doc:name="Salesforce" name="Salesforce" username="username" password="password" securityToken="devToken">
        <sfdc:connection-pooling-profile exhaustedAction="WHEN_EXHAUSTED_GROW" initialisationPolicy="INITIALISE_ONE"/>
    </sfdc:config>

    <batch:job max-failed-records="1000" name="CreateLeadsBatch">
        <batch:threading-profile poolExhaustedAction="WAIT"/>
        <batch:input>
            <file:inbound-endpoint doc:name="Poll CSV files" moveToDirectory="src/main/resources/output" path="src/main/resources/input" pollingFrequency="10000" responseTimeout="10000"/>
            <dw:transform-message doc:name="Transform CSV to Maps" metadata:id="7bff9652-407a-4479-9e4a-6f82f57ec3f6">
                <dw:set-payload><![CDATA[%dw 1.0
%output application/java
---
payload map {
	Company    : $.Company,
	Email      : $.Email,
	FirstName  : $.FirstName,
	LastName   : $.LastName
}]]></dw:set-payload>
            </dw:transform-message>

        </batch:input>
        <batch:process-records>
            <batch:step name="LeadExistsStep">
                <enricher doc:name="Message Enricher" source="#[payload.size() > 0]" target="#[recordVars['exists']]">
                    <sfdc:query config-ref="Salesforce" doc:name="Find Lead" query="dsql:SELECT Id FROM Lead WHERE Email = '#[payload[&quot;Email&quot;]]'"/>
                </enricher>
            </batch:step>
            <batch:step accept-expression="#[!recordVars['exists']]" name="LeadInsertStep">
                <logger doc:name="Log the lead" level="INFO" message="Got Record #[payload], it exists #[recordVars['exists']]"/>
                <batch:commit doc:name="Batch Commit" size="200">
                    <sfdc:create config-ref="Salesforce" type="Lead" doc:name="Insert Lead">
                        <sfdc:objects ref="#[payload]"/>
                    </sfdc:create>
                </batch:commit>
            </batch:step>
            <batch:step accept-policy="ONLY_FAILURES" name="LogFailuresStep">
                <logger doc:name="Log Failure" level="INFO" message="Got Failure #[payload]"/>
            </batch:step>
        </batch:process-records>
        <batch:on-complete>
            <logger doc:name="Log Results" level="INFO" message="#[payload.loadedRecords] Loaded Records #[payload.failedRecords] Failed Records"/>
        </batch:on-complete>
    </batch:job>
</mule>
----
....
------

按照上面的示例，假定您想记录每次提交生成的Salesforce ID。
对于包含表达式：`record.recordVars['sfdcld'] = payload.wrapped.id'. This automatically gets you a variable called `记录`的Foreach范围，您可以使用<<Sequential Access>>方法来保存对聚合记录之一的引用。

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:example_batch2.png[example_batch2]
....
[tab,title="XML Editor"]
....
[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
<mule xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:batch="http://www.mulesoft.org/schema/mule/batch" xmlns:context="http://www.springframework.org/schema/context" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation" xmlns:dw="http://www.mulesoft.org/schema/mule/ee/dw" xmlns:file="http://www.mulesoft.org/schema/mule/file" xmlns:metadata="http://www.mulesoft.org/schema/mule/metadata" xmlns:sfdc="http://www.mulesoft.org/schema/mule/sfdc" xmlns:spring="http://www.springframework.org/schema/beans" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/file http://www.mulesoft.org/schema/mule/file/current/mule-file.xsd
http://www.mulesoft.org/schema/mule/batch http://www.mulesoft.org/schema/mule/batch/current/mule-batch.xsd
http://www.mulesoft.org/schema/mule/sfdc http://www.mulesoft.org/schema/mule/sfdc/current/mule-sfdc.xsd
http://www.springframework.org/schema/context http://www.springframework.org/schema/context/spring-context-current.xsd
http://www.mulesoft.org/schema/mule/ee/dw http://www.mulesoft.org/schema/mule/ee/dw/current/dw.xsd">

    <sfdc:config doc:name="Salesforce" name="Salesforce" password="${sfdcPassword}" securityToken="${sfdcTOken}" username="${sfdcUser}">
        <sfdc:connection-pooling-profile exhaustedAction="WHEN_EXHAUSTED_GROW" initialisationPolicy="INITIALISE_ONE"/>
    </sfdc:config>

    <batch:job max-failed-records="1000" name="CreateLeadsBatch">
        <batch:threading-profile poolExhaustedAction="WAIT"/>
        <batch:input>
            <file:inbound-endpoint doc:name="Poll CSV files" moveToDirectory="src/main/resources/output" path="src/main/resources/input" pollingFrequency="10000" responseTimeout="10000"/>
            <dw:transform-message doc:name="Transform CSV to Maps" metadata:id="7bff9652-407a-4479-9e4a-6f82f57ec3f6">
                <dw:set-payload><![CDATA[%dw 1.0
%output application/java
---
payload map {
	Company    : $.Company,
	Email      : $.Email,
	FirstName  : $.FirstName,
	LastName   : $.LastName
}]]></dw:set-payload>
            </dw:transform-message>

        </batch:input>
        <batch:process-records>
            <batch:step name="LeadExistsStep">
                <enricher doc:name="Message Enricher" source="#[payload.size() > 0]" target="#[recordVars['exists']]">
                    <sfdc:query config-ref="Salesforce" doc:name="Find Lead" query="dsql:SELECT Id FROM Lead WHERE Email = '#[payload[&quot;Email&quot;]]'"/>
                </enricher>
            </batch:step>
            <batch:step accept-expression="#[!recordVars['exists']]" name="LeadInsertStep">
                <logger doc:name="Log the lead" level="INFO" message="Got Record #[payload], it exists #[recordVars['exists']]"/>
                <batch:commit doc:name="Batch Commit" size="200">
                    <sfdc:create config-ref="Salesforce" type="Lead" doc:name="Insert Lead">
                        <sfdc:objects ref="#[payload]"/>
                    </sfdc:create>
                    <foreach doc:name="For Each">
                        <expression-component doc:name="Expression"><![CDATA[record.recordVars['sfdcld'] = payload.wrapped.id]]></expression-component>
                    </foreach>
                </batch:commit>
            </batch:step>
            <batch:step accept-policy="ONLY_FAILURES" name="LogFailuresStep">
                <logger doc:name="Log Failure" level="INFO" message="Got Failure #[payload]"/>
            </batch:step>
        </batch:process-records>
        <batch:on-complete>
            <logger doc:name="Log Results" level="INFO" message="#[payload.loadedRecords] Loaded Records #[payload.failedRecords] Failed Records"/>
        </batch:on-complete>
    </batch:job>
</mule>
----
....
------

此外，您可以尝试修改第一条记录的有效负载，只需使用来自Foreach范围外的新Expression组件的<<Random Access>>。
`Expression component`应该是：

[source, xml, linenums]
----
<expression-component doc:name="Expression">
  records[1].payload = 'New payload for the second record'
</expression-component>
----

这只会修改第二条记录的有效负载，如果您检查每个有效内容的`LoggerMessageProcessor`，它会捕获如下内容：
[source, source, linenums]
----
LoggerMessageProcessor: {FirstName=John, LastName=Doe, Email=john.doe@texasComp.com, Phone=096548763}
LoggerMessageProcessor: New payload for the second record
----

== 另请参阅

* 访问有关批处理的 link:/mule-user-guide/v/3.8/batch-processing-reference[参考细节]。

* 阅读关于Mule批处理的 link:/mule-user-guide/v/3.8/batch-processing[基本的解剖学]。

* 检查您可以为批处理作业，步骤和消息处理器配置的 link:/mule-user-guide/v/3.8/batch-processing-reference[属性]。

* 详细了解如何设置和删除 link:/mule-user-guide/v/3.8/record-variable[记录级变量。]
